[package]
name = "youtube-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
csv = "1.2.2"
env_logger = "0.10.0"
log = "0.4.20"
rayon = "1.8.0"
reqwest = { version = "0.11.6", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
